Create functionality for displaying winner and adjust element placement

--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,15 @@
 body,
 html {
+    width: 100vw;
+    height: 100vh;
     padding: 0;
-    margin: 1vmin;
+    margin: 0;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 5vmin;
 }
 
 #boards {
@@ -53,7 +56,17 @@ html {
 }
 
 #axis,
-#startGame {
+#startGame,
+#resetGame {
     width: 10vmin;
     display: none;
 }
+
+.sizeButtons {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5vmin;
+    justify-content: center;
+    align-items: center;
+}
+
